failing to exclude students who had left a registration group. The
leavingdate clause has been added to the check_CommunityAttendance
function.

Tracked down missing D grades in the ReportBook to scoreToGrade()
function mistaking grades with score value zero for null strings.
Now use is_numeric for scoreToGrade() and scoreToPercent().
 
Version ClaSS-0.8.6 release (2007/01/03)
----------------------------------------

A bugfix to the register to allow the display of a fresh attendance
event even correctly. Achieved with a simplification of the code by
adding the fresh event to the end of the existing AttendanceEvents.

Version ClaSS-0.8.5 release (2006/12/20)
----------------------------------------

Added a timezone setting to $CFG and included in classdata to set for
all pages. Really only needed by the Register when the school's
timezone differs form the servers.

Bug fix to responables page. The pastoral buttons needed their
rowaction container to work.

Moving towards using listCommunties function in both admin and
register, to list all communities of one type.

Added completion_list to the register to list the status of
registration groups for the current event. This also uses a new xsl
template to print the registers.

To allow xsl printing within the register the events have been given
an AttendanceEvent xmlarray.
 
Added simple nav buttons to the register_list to move back in time one
week at a time.

Version ClaSS-0.8.4 release (2006/12/16)
----------------------------------------

Now made the book_session_variables script available to host pages to
handle post and get for vars that maintain state between reloads. It
doesn't do anything extra upon var change so is currently only used in
the seneeds book.

Filtering the student_list in seneeds book by sentype, yeargroup, and
sen review date now implemented as part of the sideoptions.

Added checkeveid to the session vars in the Register, it now maintains
the selected column.
