@@ -94,7 +94,7 @@ three_buttonmenu();
 		  </tr>
 		  <div id="<?php print 'xml-'.$entryno;?>" style="display:none;">
 <?php
-				xmlpreparer('Incident',$entry);
+				xmlechoer('Incident',$entry);
 ?>
 		  </div>
 		</tbody>
