@@ -209,7 +209,7 @@ $string['cohortmatrix']='Cohort matrix';
 $string['communities']='Communities';
 $string['readytocontinue']='Continue?';
 $string['confirm']='Confirm action.';
-$string['gradingscheme']='gradingscheme';
+$string['gradingscheme']='Grading scheme';
 $string['noactiontaken']='NO action has been taken!';
 $string['male']='Male';
 $string['female']='Female';
