@@ -19,60 +19,47 @@ three_buttonmenu($extrabuttons);
 		<label for="Description"><?php print_string('description');?></label>
 		<input class="required" type="text" id="Description" tabindex="<?php print $tab++;?>" 
 				name="description"  style="width:20em;" maxlength="59" value="" />
+
+		<label for="Element"><?php print_string('element',$book);?></label>
+		<input class="required" type="text" id="Element" tabindex="<?php print $tab++;?>" 
+				name="element"  style="width:3em;" maxlength="3" value="" />
+
+		<label for="Printlabel"><?php print_string('printlabel',$book);?></label>
+		<input class="required" type="text" id="Printlabel" tabindex="<?php print $tab++;?>" 
+				name="printlabel"  style="width:8em;" maxlength="59" value="" />
 	  </div>
 
 	  <div class="right">
 		<?php 		include('scripts/list_stage.php'); ?>
 		<?php 		include('scripts/list_calendar_year.php');?>
+<?php 
+		include('scripts/list_subjects.php'); 
+		include('scripts/list_componentstatus.php'); 
+?>
 	  </div>
 
 	  <div class="left">
 		<label><?php print_string('create',$book);?></label>
 		<?php $xmldate='Creation'; $required='no'; 
 			$todate='0000-00-00'; include('scripts/jsdate-form.php');?>
-	  </div>
-	  <div class="right">
+
 		<label><?php print_string('deadlineforcompletion');?></label>
-		<?php $xmldate='Deadline'; $required='no'; include('scripts/jsdate-form.php');?>
-	  </div>
-
-	  <div class="left"> 
-		<label for="Printlabel"><?php print_string('printlabel',$book);?></label>
-		<input class="required" type="text" id="Printlabel" tabindex="<?php print $tab++;?>" 
-				name="printlabel"  style="width:20em;" maxlength="59" value="" />
-	  </div>
-
-
-	  <div class="right">
-<?php 
-		include('scripts/list_subjects.php'); 
-?>
+		<?php $xmldate='Deadline'; $required='yes'; include('scripts/jsdate-form.php');?>
 	  </div>
 
 	  <div class="right">
-<?php 
-		include('scripts/list_componentstatus.php'); 
-?>
-	  </div>
-
-
-	  <div class="left">
 <?php 
 		$required='no';
 		include('scripts/list_gradescheme.php'); 
+		include('scripts/list_method.php'); 
+		include('scripts/list_resultqualifier.php'); 
 ?>
 	  </div>
 
 	  <div class="left">
-<?php
-		include('scripts/list_method.php'); 
-?>
-	  </div>
-
-	  <div class="right">
-<?php
-		include('scripts/list_resultqualifier.php'); 
-?>
+		<label for="Derivation"><?php print_string('derivation',$book);?></label>
+		<input type="text" id="Derivation" tabindex="<?php print $tab++;?>" 
+				name="derivation" style="width:12em;" maxlength="59" value="" />
 	  </div>
 
 	  <input type="text" style="display:none;" id="Id_db" name="id" value="" />
@@ -91,9 +78,10 @@ three_buttonmenu($extrabuttons);
 			<th></th>
 			<th><?php print get_string('curriculumyear').' ('.get_string('season').')';?></th>
 			<th><?php print_string('stage');?></th>
+			<th><?php print_string('subject');?></th>
 			<th><?php print_string('status');?></th>
 			<th><?php print_string('description');?></th>
-			<th><?php print_string('elementid',$book);?></th>
+			<th><?php print_string('element',$book);?></th>
 		  </tr>
 		</thead>
 <?php
@@ -111,21 +99,22 @@ three_buttonmenu($extrabuttons);
 			<th>&nbsp</th>
 			<td><?php print $AssDef['Year']['value'].'('.$AssDef['Season']['value'].')'; ?></td>
 			<td><?php print $AssDef['Stage']['value']; ?></td>
+			<td><?php print $AssDef['Subject']['value']; ?></td>
 			<td class='<?php print $AssDef['ResultStatus']['value']; ?>'><?php print $AssDef['ResultStatus']['value']; ?></td>
 			<td><?php print $AssDef['Description']['value']; ?></td>
 			<td><?php print $AssDef['Element']['value']; ?></td>
 		  </tr>
 		  <tr class="hidden" id="<?php print $eid.'-'.$rown++;?>">
-			<td colspan="6">
+			<td colspan="7">
 			  <p>
 				<value id="<?php print $eid;?>-MarkCount"><?php print
 						 $AssDef['MarkCount']['value'];?></value> 
 				<?php print_string('markbookcolumns',$book);?>
-				<value id="<?php print $eid;?>-ScoreCount"> 
-				  <?php print $AssDef['ScoreCount']['value'];?></value>. 
 				<?php print_string('scoresentered',$book);?>
 				<value id="<?php print $eid;?>-ArchiveCount">
 				  <?php print $AssDef['ArchiveCount']['value'];?></value>
+				(<value id="<?php print $eid;?>-ScoreCount"> 
+				  <?php print $AssDef['ScoreCount']['value'];?></value>).
 			  </p>
 			  <button class="rowaction" title="Delete this assessment"
 				name="current" value="delete_assessment.php" onClick="clickToAction(this)">
@@ -134,19 +123,27 @@ three_buttonmenu($extrabuttons);
 			  <button class="rowaction" title="Edit" name="Edit" onClick="clickToAction(this)">
 				<img class="clicktoedit" />
 			  </button>
-			  <button class="rowaction" title="Delete MarkBook columns" name="current" 
-				value="delete_assessment_columns.php" onClick="clickToAction(this)">
-				<?php print_string('deletecolumns',$book);?>
-			  </button>
+<?php		if($AssDef['MarkCount']['value']==0){ ;?>
 			  <button class="rowaction" title="Generate MarkBook columns" name="current" 
 				value="generate_assessment_columns.php" onClick="clickToAction(this)">
 				<?php print_string('generatecolumns',$book);?>
 			  </button>
+<?php 
+				}
+			else {
+?>
+			  <button class="rowaction" title="Delete MarkBook columns" name="current" 
+				value="delete_assessment_columns.php" onClick="clickToAction(this)">
+				<?php print_string('deletecolumns',$book);?>
+			  </button>
+<?php 
+				}
+?>
 			</td>
 		  </tr>
 		  <div id="<?php print 'xml-'.$eid;?>" style="display:none;">
 <?php
-	xmlpreparer('AssessmentDefinition',$AssDef);
+	xmlechoer('AssessmentDefinition',$AssDef);
 ?>
 		  </div>
 		</tbody>
@@ -155,4 +152,4 @@ three_buttonmenu($extrabuttons);
 ?>
 	  </table>
 	</div>
-  </div>	
+  </div>
